Feature/import supersede follow ups (#133)
- add field for supersede and follow-up to import DTO
+semver: patch